Fix top user spacing

--- a/app/assets/stylesheets/homepage.sass
+++ b/app/assets/stylesheets/homepage.sass
@@ -11,3 +11,4 @@
   .user-container
     display: inline-block
     padding: 10px
+    width: 240px
